--- a/node-development/app/sass/framework/components/_bc-feature-component.sass
+++ b/node-development/app/sass/framework/components/_bc-feature-component.sass
@@ -1,5 +1,6 @@
 .bc-feature-component 
 	position: relative
+	z-index: auto
 	@include makeSection
 	padding-top: 		$vertical-unit * 2 
 	padding-bottom: $vertical-unit * 2 
